# Quant

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
configs/: alphas.yaml  attribution.yaml  backtest.yaml  baselines.yaml  benchmarks.yaml  catalog.yaml  csv_import.yaml  data.yaml  data_quality.yaml  dataset.yaml  equity_comparison.yaml  factor_panel.yaml  factor_selection.yaml  factor_signals.yaml  factors.yaml  features.yaml  model_backtest.yaml  model_strategy.yaml  prediction_signals.yaml  recurrent.yaml  regime.yaml  reporting.yaml  sensitivity.yaml  strategy.yaml  studio_candidate_evidence.yaml  studio_optimizer.yaml  studio_profile.yaml  studio_robustness.yaml  studio_walk_forward.yaml  transformer.yaml
data/: README.md
docs/: BACKTEST_ENGINE.md  BASELINE_EXPERIMENTS.md  BENCHMARKS.md  CANDIDATE_EVIDENCE.md  COMMON_PERIOD_COMPARISON.md  CSV_MARKET_IMPORT.md  DATASET_DESIGN.md  DATA_QUALITY.md  DUCKDB_CATALOG.md  FACTOR_VALIDATION.md  FEATURE_DICTIONARY.md  FORMULAIC_ALPHAS.md  GUI.md  INVESTOR_NEEDS.md  LIVE_EXPERIMENT.md  MARKET_DATA_CONTRACT.md  PROJECT_PLAN.md  QUANTLAB_WORKFLOW.md  RECURRENT_MODELS.md  REGIME_ANALYSIS.md  REPORTING.md  RESULTS_CHECKLIST.md  RESUME_PROJECT.md  RETURN_ATTRIBUTION.md  ROBUSTNESS.md  SENSITIVITY_ANALYSIS.md  SMOKE_WORKFLOW.md  STRATEGY_CONSTRUCTION.md  STRATEGY_STUDIO.md  STRATEGY_STUDIO_RESULTS.md  STUDIO_ARCHITECTURE.md  TRANSFORMER_V1.md  V1_1_PLAN.md  WALK_FORWARD.md
examples/: universe_membership.csv
notebooks/: README.md
scripts/: analyze_market_quality.py  analyze_regimes.py  build_alphas.py  (+29 more)
(+139 files in other folders)
