[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab-strategy-studio"
version = "0.1.0"
description = "Custom quantitative strategy design, backtesting, and comparison studio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hubert Kuo" }]
dependencies = [
  "duckdb>=1,<2",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyarrow>=14,<22",
  "PyYAML>=6,<7",
  "yfinance>=0.2.40,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]
ml = [
  "lightgbm>=4,<5",
  "scikit-learn>=1.4,<2",
  "torch>=2.2,<3",
  "xgboost>=2,<4",
]
gui = [
  "plotly>=5,<7",
  "streamlit>=1.35,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
